# mythril-dev

./: .gitignore  .prettierrc.yml  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge-update-versions-pr.yml  publish-images.yml  test-all.yml  test-images.yml  update-versions.yml
docker/: .dockerignore  Dockerfile  base-images.json  dependencies.Dockerfile  dependencies.Dockerfile.dockerignore  dependencies.hcl  docker-bake.hcl  docker-bake.wheels.hcl  docker-entrypoint.sh  gen_version_vars.py  lock_base_images.py  pyproject.toml
